Add: hooks custom

--- a/render_10000_data.html
+++ b/render_10000_data.html
@@ -14,7 +14,7 @@
 </body>
 <script>
 
-  var root = document.getElementById("root");
+  // var root = document.getElementById("root");
 
   let ul = document.getElementById('root');
 // 插入十万条数据
